--- a/BeamForming/MainWindow.xaml
+++ b/BeamForming/MainWindow.xaml
@@ -6,6 +6,9 @@
         xmlns:local="clr-namespace:BeamForming"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
+    <Window.DataContext>
+        <local:MainViewModel/>
+    </Window.DataContext>
     <Grid>
         
     </Grid>
