--- a/BeamForming/MainWindow.xaml
+++ b/BeamForming/MainWindow.xaml
@@ -1,15 +1,58 @@
 ﻿<Window x:Class="BeamForming.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BeamForming"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:oxy="http://oxyplot.org/wpf"
+        Height="350" Width="525"
+        Title="{Binding WindowTitle}"        >
     <Window.DataContext>
         <local:MainViewModel/>
     </Window.DataContext>
-    <Grid>
-        
-    </Grid>
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="Файл">
+                <MenuItem Header="Выход" />
+            </MenuItem>
+            <MenuItem Header="Сервис"/>
+            <MenuItem Header="О программе" Command="{Binding RecalculatePattern}"/>
+        </Menu>
+        <GroupBox Header="Содержимое">
+            <TabControl>
+                <TabItem Header="Данные 1">
+                    <DockPanel>
+                        <StackPanel DockPanel.Dock="Top">
+                            <Button Content="Обновить" HorizontalAlignment="Left" Command="{Binding RecalculatePattern}"/>
+                        </StackPanel>
+                        <ListView ItemsSource="{Binding Pattern}" >
+                            <ListView.ItemTemplate>
+                                <DataTemplate DataType="{x:Type local:BeamPatternValue}">
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Угол:"/>
+                                        <TextBlock Text="{Binding Angle}"/>
+                                        <TextBlock Text="{Binding Value, StringFormat=' значение {0:f3}'}"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </DockPanel>
+                </TabItem>
+                <TabItem Header="Данные 2">
+                    <oxy:Plot>
+                        <oxy:Plot.Axes>
+                            <oxy:LinearAxis Key="angle"/>
+                            <oxy:LinearAxis Key="value"/>
+                        </oxy:Plot.Axes>
+                        <oxy:Plot.Series>
+                            <oxy:LineSeries ItemsSource="{Binding Pattern}" 
+                                            DataFieldX="Angle" DataFieldY="Value"
+                                            Color="Red" StrokeThickness="7"/>
+                        </oxy:Plot.Series>
+                    </oxy:Plot>   
+                </TabItem>
+            </TabControl>
+        </GroupBox>
+    </DockPanel>
+   
 </Window>
