--- a/BeamForming/MainWindow.xaml
+++ b/BeamForming/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:BeamForming"
         xmlns:oxy="http://oxyplot.org/wpf"
         Height="350" Width="525"
-        Title="{Binding WindowTitle}"        >
+        Title="{Binding WindowTitle}">
     <Window.DataContext>
         <local:MainViewModel/>
     </Window.DataContext>
@@ -18,41 +18,27 @@
             <MenuItem Header="Сервис"/>
             <MenuItem Header="О программе" Command="{Binding RecalculatePattern}"/>
         </Menu>
-        <GroupBox Header="Содержимое">
-            <TabControl>
-                <TabItem Header="Данные 1">
-                    <DockPanel>
-                        <StackPanel DockPanel.Dock="Top">
-                            <Button Content="Обновить" HorizontalAlignment="Left" Command="{Binding RecalculatePattern}"/>
-                        </StackPanel>
-                        <ListView ItemsSource="{Binding Pattern}" >
-                            <ListView.ItemTemplate>
-                                <DataTemplate DataType="{x:Type local:BeamPatternValue}">
-                                    <StackPanel Orientation="Horizontal">
-                                        <TextBlock Text="Угол:"/>
-                                        <TextBlock Text="{Binding Angle}"/>
-                                        <TextBlock Text="{Binding Value, StringFormat=' значение {0:f3}'}"/>
-                                    </StackPanel>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                    </DockPanel>
-                </TabItem>
-                <TabItem Header="Данные 2">
-                    <oxy:Plot>
-                        <oxy:Plot.Axes>
-                            <oxy:LinearAxis Key="angle"/>
-                            <oxy:LinearAxis Key="value"/>
-                        </oxy:Plot.Axes>
-                        <oxy:Plot.Series>
-                            <oxy:LineSeries ItemsSource="{Binding Pattern}" 
-                                            DataFieldX="Angle" DataFieldY="Value"
-                                            Color="Red" StrokeThickness="7"/>
-                        </oxy:Plot.Series>
-                    </oxy:Plot>   
-                </TabItem>
-            </TabControl>
-        </GroupBox>
+        <ToolBar DockPanel.Dock="Top">
+            <TextBlock Text="Угол отклонения луча"/>
+            <TextBox Text="{Binding Th0, StringFormat={}{0:0.##}}" Width="50"/>
+            <Slider Width="100" Minimum="-5" Maximum="5" Value="{Binding Th0}" 
+                    AutoToolTipPlacement="BottomRight" LargeChange="0.1" SmallChange="0.01" TickFrequency="5" TickPlacement="BottomRight" />
+        </ToolBar>
+        <oxy:Plot>
+            <oxy:Plot.Axes>
+                <!-- PositionAtZeroCrossing="True" TitlePosition="0.05" AxisTitleDistance="-45" FractionUnit="0.0175" FractionUnitSymbol="deg" FormatAsFractions="True" -->
+                <oxy:LinearAxis Position="Bottom"  Title="Угол"
+                                MajorGridlineColor="Gray" MinorGridlineColor="LightGray" MajorGridlineStyle="Solid" MinorGridlineStyle="Dash"
+                                AxislineColor="Black" AxislineStyle="Solid" AxislineThickness="2" Unit="deg"
+                                />
+                <oxy:LinearAxis Position="Left" Title="ДН" AxislineColor="Black" AxislineStyle="Solid" AxislineThickness="2"
+                                MajorGridlineColor="Gray" MinorGridlineColor="LightGray" Minimum="-40"/>
+            </oxy:Plot.Axes>
+            <oxy:Plot.Series>
+                <oxy:LineSeries StrokeThickness="2" Color="Red" 
+                                ItemsSource="{Binding BeamNorm}" DataFieldX="Angle_deg" DataFieldY="Value_db"/>
+            </oxy:Plot.Series>
+        </oxy:Plot>
     </DockPanel>
    
 </Window>
