--- a/BeamForming/MainWindow.xaml
+++ b/BeamForming/MainWindow.xaml
@@ -5,40 +5,93 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BeamForming"
         xmlns:oxy="http://oxyplot.org/wpf"
-        Height="350" Width="525"
+        Height="429" Width="739"
         Title="{Binding WindowTitle}">
     <Window.DataContext>
         <local:MainViewModel/>
     </Window.DataContext>
-    <DockPanel>
-        <Menu DockPanel.Dock="Top">
-            <MenuItem Header="Файл">
-                <MenuItem Header="Выход" />
-            </MenuItem>
-            <MenuItem Header="Сервис"/>
-            <MenuItem Header="О программе" Command="{Binding RecalculatePattern}"/>
-        </Menu>
-        <ToolBar DockPanel.Dock="Top">
-            <TextBlock Text="Угол отклонения луча"/>
-            <TextBox Text="{Binding Th0, StringFormat={}{0:0.##}}" Width="50"/>
-            <Slider Width="100" Minimum="-5" Maximum="5" Value="{Binding Th0}" 
+    <TabControl TabStripPlacement="Bottom">
+        <TabItem Header="Диаграмма направленности ЦАР">
+            <DockPanel>
+                <Menu DockPanel.Dock="Top">
+                    <MenuItem Header="Файл">
+                        <MenuItem Header="Выход" />
+                    </MenuItem>
+                    <MenuItem Header="Сервис"/>
+                    <MenuItem Header="О программе" Command="{Binding RecalculatePattern}"/>
+                </Menu>
+                <ToolBar DockPanel.Dock="Top">
+                    <TextBlock Text="Угол отклонения луча"/>
+                    <TextBox Text="{Binding Th0, StringFormat={}{0:0.##}}" Width="50"/>
+                    <Slider Width="100" Minimum="-90" Maximum="90" Value="{Binding Th0}" 
                     AutoToolTipPlacement="BottomRight" LargeChange="0.1" SmallChange="0.01" TickFrequency="5" TickPlacement="BottomRight" />
-        </ToolBar>
-        <oxy:Plot>
-            <oxy:Plot.Axes>
-                <!-- PositionAtZeroCrossing="True" TitlePosition="0.05" AxisTitleDistance="-45" FractionUnit="0.0175" FractionUnitSymbol="deg" FormatAsFractions="True" -->
-                <oxy:LinearAxis Position="Bottom"  Title="Угол"
+                </ToolBar>
+                <GroupBox DockPanel.Dock="Bottom" Header="Параметры">
+                    <StackPanel Orientation="Horizontal">
+                        <StackPanel.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="BorderThickness" Value="2"/>
+                                <Setter Property="BorderBrush" Value="Black"/>
+                                <Setter Property="Margin" Value="3"/>
+                                <Setter Property="Padding" Value="3"/>
+                                <Setter Property="CornerRadius" Value="4"/>
+                            </Style>
+                            <Style x:Key="Container" TargetType="StackPanel">
+                                <Setter Property="VerticalAlignment" Value="Center"/>
+                            </Style>
+                        </StackPanel.Resources>
+
+                        <Border>
+                            <StackPanel Style="{StaticResource Container}">
+                                <TextBlock Text="Усиление"/>
+                                <TextBlock Text="{Binding Max, StringFormat='КУ={0:0.##}db'}"/>
+                            </StackPanel>
+                        </Border>
+                        <Border >
+                            <StackPanel Style="{StaticResource Container}">
+                                <TextBlock Text="Ширина луча"/>
+                                <TextBlock Text="{Binding BeamWidth07, StringFormat='2Θ07={0:0.##}°'}"/>
+                                <TextBlock>
+                            <Run Text="2Θ"/><Run Text="0" FontSize="10" ToolTip="qwe"/><Run Text="="/><Run Text="{Binding BeamWidth0, Mode=OneWay}"/><Run>°</Run>
+                                </TextBlock>
+                            </StackPanel>
+                        </Border>
+                        <Border>
+                            <StackPanel VerticalAlignment="Center">
+                                <TextBlock Text="{Binding UBL, StringFormat='УБЛ={0:0.##}db'}" HorizontalAlignment="Center"/>
+                                <TextBlock Text="{Binding MeanUBL, StringFormat='Средний УБЛ={0:0.##}db'}"/>
+                            </StackPanel>
+                        </Border>
+                    </StackPanel>
+                </GroupBox>
+                <oxy:Plot>
+                    <oxy:Plot.Axes>
+                        <!-- PositionAtZeroCrossing="True" TitlePosition="0.05" AxisTitleDistance="-45" FractionUnit="0.0175" FractionUnitSymbol="deg" FormatAsFractions="True" -->
+                        <oxy:LinearAxis Position="Bottom"  Title="Угол"
                                 MajorGridlineColor="Gray" MinorGridlineColor="LightGray" MajorGridlineStyle="Solid" MinorGridlineStyle="Dash"
                                 AxislineColor="Black" AxislineStyle="Solid" AxislineThickness="2" Unit="deg"
                                 />
-                <oxy:LinearAxis Position="Left" Title="ДН" AxislineColor="Black" AxislineStyle="Solid" AxislineThickness="2"
+                        <oxy:LinearAxis Position="Left" Title="ДН" AxislineColor="Black" AxislineStyle="Solid" AxislineThickness="2"
                                 MajorGridlineColor="Gray" MinorGridlineColor="LightGray" Minimum="-40"/>
-            </oxy:Plot.Axes>
-            <oxy:Plot.Series>
-                <oxy:LineSeries StrokeThickness="2" Color="Red" 
-                                ItemsSource="{Binding BeamNorm}" DataFieldX="Angle_deg" DataFieldY="Value_db"/>
-            </oxy:Plot.Series>
-        </oxy:Plot>
-    </DockPanel>
-   
+                    </oxy:Plot.Axes>
+                    <oxy:Plot.Series>
+                        <oxy:LineSeries StrokeThickness="2" Color="Red" ItemsSource="{Binding BeamNorm}" DataFieldX="Angle_deg" DataFieldY="Value_db"/>
+                    </oxy:Plot.Series>
+                    <oxy:Plot.Annotations>
+                        <oxy:LineAnnotation X="{Binding LeftBeamEdge_07}" Type="Vertical" />
+                        <oxy:LineAnnotation X="{Binding RightBeamEdge_07}" Type="Vertical" />
+                        <oxy:LineAnnotation Y="-3" Type="Horizontal" MinimumX="{Binding LeftBeamEdge_07}" MaximumX="{Binding RightBeamEdge_07}" />
+                        <oxy:LineAnnotation Y="{Binding UBL}" Type="Horizontal" Color="Red" Text="УБЛ"/>
+                        <oxy:LineAnnotation Y="{Binding MeanUBL}" Type="Horizontal" Color="Red" Text="Средний УБЛ" LineStyle="Dot"/>
+                    </oxy:Plot.Annotations>
+                </oxy:Plot>
+            </DockPanel>
+        </TabItem>
+        <TabItem Header="Зависимости">
+            <TabControl>
+                <TabItem Header="КНД от ..."></TabItem>
+                <TabItem Header="УБЛ от ..."></TabItem>
+            </TabControl>  
+        </TabItem>
+    </TabControl>
 </Window>
