--- a/BeamForming/MainWindow.xaml
+++ b/BeamForming/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:BeamForming"
         xmlns:oxy="http://oxyplot.org/wpf"
         Height="429" Width="739"
-        Title="{Binding WindowTitle}">
+        Title="---">
     <Window.DataContext>
         <local:MainViewModel/>
     </Window.DataContext>
@@ -23,8 +23,8 @@
                 <ToolBar DockPanel.Dock="Top">
                     <TextBlock Text="Угол отклонения луча"/>
                     <TextBox Text="{Binding Th0, StringFormat={}{0:0.##}}" Width="50"/>
-                    <Slider Width="100" Minimum="-90" Maximum="90" Value="{Binding Th0}" 
-                    AutoToolTipPlacement="BottomRight" LargeChange="0.1" SmallChange="0.01" TickFrequency="5" TickPlacement="BottomRight" />
+                    <Slider Width="479" Minimum="-90" Maximum="90" Value="{Binding Th0}" 
+                        AutoToolTipPlacement="BottomRight" LargeChange="5" SmallChange="1" TickFrequency="5" TickPlacement="BottomRight" />
                 </ToolBar>
                 <GroupBox DockPanel.Dock="Bottom" Header="Параметры">
                     <StackPanel Orientation="Horizontal">
@@ -44,7 +44,8 @@
                         <Border>
                             <StackPanel Style="{StaticResource Container}">
                                 <TextBlock Text="Усиление"/>
-                                <TextBlock Text="{Binding Max, StringFormat='КУ={0:0.##}db'}"/>
+                                <TextBlock Text="{Binding Max_db, StringFormat='КУ={0:0.##}db'}"/>
+                                <TextBlock Text="{Binding Max, StringFormat='{}{0:0.##}'}" FontSize="8" HorizontalAlignment="Right" Margin="0,0,15,0"/>
                             </StackPanel>
                         </Border>
                         <Border >
@@ -52,25 +53,18 @@
                                 <TextBlock Text="Ширина луча"/>
                                 <TextBlock Text="{Binding BeamWidth07, StringFormat='2Θ07={0:0.##}°'}"/>
                                 <TextBlock>
-                            <Run Text="2Θ"/><Run Text="0" FontSize="10" ToolTip="qwe"/><Run Text="="/><Run Text="{Binding BeamWidth0, Mode=OneWay}"/><Run>°</Run>
+                                    <Run Text="2Θ"/><Run Text="0" FontSize="10" ToolTip="qwe"/><Run Text="="/><Run Text="{Binding BeamWidth0, Mode=OneWay, StringFormat={}{0:0.##}}"/><Run>°</Run>
                                 </TextBlock>
-                            </StackPanel>
-                        </Border>
-                        <Border>
-                            <StackPanel VerticalAlignment="Center">
-                                <TextBlock Text="{Binding UBL, StringFormat='УБЛ={0:0.##}db'}" HorizontalAlignment="Center"/>
-                                <TextBlock Text="{Binding MeanUBL, StringFormat='Средний УБЛ={0:0.##}db'}"/>
                             </StackPanel>
                         </Border>
                     </StackPanel>
                 </GroupBox>
-                <oxy:Plot>
+                <oxy:Plot Title="ДН ЦАР" TitleFontSize="14" MouseRightButtonDown="OnPlotMouseUp">
                     <oxy:Plot.Axes>
                         <!-- PositionAtZeroCrossing="True" TitlePosition="0.05" AxisTitleDistance="-45" FractionUnit="0.0175" FractionUnitSymbol="deg" FormatAsFractions="True" -->
                         <oxy:LinearAxis Position="Bottom"  Title="Угол"
                                 MajorGridlineColor="Gray" MinorGridlineColor="LightGray" MajorGridlineStyle="Solid" MinorGridlineStyle="Dash"
-                                AxislineColor="Black" AxislineStyle="Solid" AxislineThickness="2" Unit="deg"
-                                />
+                                AxislineColor="Black" AxislineStyle="Solid" AxislineThickness="2" Unit="deg"/>
                         <oxy:LinearAxis Position="Left" Title="ДН" AxislineColor="Black" AxislineStyle="Solid" AxislineThickness="2"
                                 MajorGridlineColor="Gray" MinorGridlineColor="LightGray" Minimum="-40"/>
                     </oxy:Plot.Axes>
@@ -81,15 +75,28 @@
                         <oxy:LineAnnotation X="{Binding LeftBeamEdge_07}" Type="Vertical" />
                         <oxy:LineAnnotation X="{Binding RightBeamEdge_07}" Type="Vertical" />
                         <oxy:LineAnnotation Y="-3" Type="Horizontal" MinimumX="{Binding LeftBeamEdge_07}" MaximumX="{Binding RightBeamEdge_07}" />
-                        <oxy:LineAnnotation Y="{Binding UBL}" Type="Horizontal" Color="Red" Text="УБЛ"/>
-                        <oxy:LineAnnotation Y="{Binding MeanUBL}" Type="Horizontal" Color="Red" Text="Средний УБЛ" LineStyle="Dot"/>
+                        <oxy:LineAnnotation Y="{Binding UBL}" Type="Horizontal" Color="Red" Text="{Binding UBL, StringFormat='УБЛ={0:f1}дБ'}"/>
+                        <oxy:LineAnnotation Y="{Binding MeanUBL}" Type="Horizontal" Color="Red" Text="{Binding MeanUBL, StringFormat='Средний УБЛ={0:f1}дБ'}" LineStyle="Dot"/>
+                        <oxy:LineAnnotation Y="0" Type="Horizontal" Color="Black" LineStyle="Solid" />
                     </oxy:Plot.Annotations>
                 </oxy:Plot>
             </DockPanel>
         </TabItem>
         <TabItem Header="Зависимости">
             <TabControl>
-                <TabItem Header="КНД от ..."></TabItem>
+                <TabItem Header="КНД от отклонения луча">
+                    <oxy:Plot Title="Зависимость КНД от угла отклонения луча" TitleFontSize="14" MouseRightButtonDown="OnPlotMouseUp">
+                        <oxy:Plot.Axes>
+                            <oxy:LinearAxis Position="Left" MajorGridlineColor="Gray" MinorGridlineColor="LightGray" MajorGridlineThickness="1" MajorGridlineStyle="Dash"
+                                            MinorGridlineStyle="Dot" Title="Усиление"/>
+                            <oxy:LinearAxis Position="Bottom" MajorGridlineColor="Gray" MinorGridlineColor="LightGray" MajorGridlineThickness="1" MajorGridlineStyle="Dash"
+                                            MinorGridlineStyle="Dot" Title="Отклонение луча"/>
+                        </oxy:Plot.Axes>
+                        <oxy:Plot.Series>
+                            <oxy:LineSeries ItemsSource="{Binding KND_th0}" DataFieldX="X" DataFieldY="YdbP" StrokeThickness="2" Color="Red"/>
+                        </oxy:Plot.Series>
+                    </oxy:Plot>
+                </TabItem>
                 <TabItem Header="УБЛ от ..."></TabItem>
             </TabControl>  
         </TabItem>
