--- a/BeamForming/MainWindow2.xaml
+++ b/BeamForming/MainWindow2.xaml
@@ -31,17 +31,47 @@
                         <Expander Header="Параметры радиосцены" IsExpanded="True">
                             <StackPanel>
                                 <TextBlock Text="Амплитуда сигнала 1 волны"/>
-                                <TextBox Text="{Binding A01, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:f2}}"/>
+                                <DockPanel>
+                                    <ScrollBar Orientation="Horizontal" DockPanel.Dock="Right"
+                                               Minimum="0" Maximum="10" 
+                                               SmallChange="0.1" Value="{Binding A01}"/>
+                                    <TextBox Text="{Binding A01, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:f2}}"/>
+                                </DockPanel>
                                 <TextBlock Text="Частота сигнала 1 волны"/>
-                                <TextBox Text="{Binding f01, Converter={l:MultiplyConverter K=1e-9}}"/>
+                                <DockPanel>
+                                    <ScrollBar Orientation="Horizontal" DockPanel.Dock="Right"
+                                               Minimum="0.1" Maximum="10" 
+                                               SmallChange="0.1" Value="{Binding f01, Converter={l:MultiplyConverter K=1e-9}}"/>
+                                    <TextBox Text="{Binding f01, Converter={l:MultiplyConverter K=1e-9}}" />
+                                </DockPanel>
                                 <TextBlock Text="Угол падения 1 волны"/>
-                                <TextBox Text="{Binding ThSignal1, UpdateSourceTrigger=PropertyChanged}"/>
+                                <DockPanel>
+                                    <ScrollBar Orientation="Horizontal" DockPanel.Dock="Right"
+                                               Minimum="-90" Maximum="90" 
+                                               SmallChange="1" Value="{Binding ThSignal1}"/>
+                                    <TextBox Text="{Binding ThSignal1, UpdateSourceTrigger=PropertyChanged}" />
+                                </DockPanel>
                                 <TextBlock Text="Амплитуда сигнала 2 волны"/>
-                                <TextBox Text="{Binding A02, UpdateSourceTrigger=PropertyChanged}"/>
+                                <DockPanel>
+                                    <ScrollBar Orientation="Horizontal" DockPanel.Dock="Right"
+                                               Minimum="0" Maximum="10" 
+                                               SmallChange="0.1" Value="{Binding A02}"/>
+                                    <TextBox Text="{Binding A02, UpdateSourceTrigger=PropertyChanged}" />
+                                </DockPanel>
                                 <TextBlock Text="Частота сигнала 2 волны"/>
-                                <TextBox Text="{Binding f02, Converter={l:MultiplyConverter K=1e-9}}"/>
+                                <DockPanel>
+                                    <ScrollBar Orientation="Horizontal" DockPanel.Dock="Right"
+                                               Minimum="0.1" Maximum="10" 
+                                               SmallChange="0.1" Value="{Binding f02, Converter={l:MultiplyConverter K=1e-9}}"/>
+                                    <TextBox Text="{Binding f02, Converter={l:MultiplyConverter K=1e-9}}" />
+                                </DockPanel>
                                 <TextBlock Text="Угол падения 2 волны"/>
-                                <TextBox Text="{Binding ThSignal2, UpdateSourceTrigger=PropertyChanged}"/>
+                                <DockPanel>
+                                    <ScrollBar Orientation="Horizontal" DockPanel.Dock="Right"
+                                               Minimum="-90" Maximum="90" 
+                                               SmallChange="1" Value="{Binding ThSignal2}"/>
+                                    <TextBox Text="{Binding ThSignal2, UpdateSourceTrigger=PropertyChanged}" />
+                                </DockPanel>
                             </StackPanel>
                         </Expander>
                         <Expander Header="Параметры решётки"  IsExpanded="True">
@@ -68,7 +98,7 @@
                             </StackPanel>
                         </Expander>
                     </StackPanel>
-                </ScrollViewer>    
+                </ScrollViewer>
             </GroupBox>
             <TabControl Grid.Column="1">
                 <TabItem Header="Сигналы">
@@ -110,11 +140,34 @@
                             <oxy:LinearBarSeries ItemsSource="{Binding OutSignalI.Spectrum}" DataFieldX="Frequency" DataFieldY="Arg" YAxisKey="Phase"
                                                  StrokeColor="Blue" StrokeThickness="1" CanTrackerInterpolatePoints="True" BarWidth="1"/>-->
                         </oxy:Plot>
-                    </Grid>     
+                    </Grid>
                 </TabItem>
                 <TabItem Header="ДН">
-                    
-                </TabItem>                
+                    <oxy:Plot Title="ДН ЦАР" TitleFontSize="14">
+                        <oxy:Plot.Axes>
+                            <!-- PositionAtZeroCrossing="True" TitlePosition="0.05" AxisTitleDistance="-45" FractionUnit="0.0175" FractionUnitSymbol="deg" FormatAsFractions="True" -->
+                            <oxy:LinearAxis Position="Bottom"  Title="Угол"
+                                MajorGridlineColor="Gray" MinorGridlineColor="LightGray" MajorGridlineStyle="Solid" MinorGridlineStyle="Dash"
+                                AxislineColor="Black" AxislineStyle="Solid" AxislineThickness="2" Unit="deg"/>
+                            <oxy:LinearAxis Position="Left" Title="ДН" AxislineColor="Black" AxislineStyle="Solid" AxislineThickness="2"
+                                MajorGridlineColor="Gray" MinorGridlineColor="LightGray" Minimum="-40"/>
+                        </oxy:Plot.Axes>
+                        <oxy:Plot.Series>
+                            <!--<oxy:LineSeries StrokeThickness="2" Color="Red" ItemsSource="{Binding BeamNorm}" DataFieldX="Angle_deg" DataFieldY="Value_db"/>-->
+                            <!--<oxy:LineSeries StrokeThickness="1" Color="Black" ItemsSource="{Binding BeamNorm1}" DataFieldX="Angle_deg" DataFieldY="Value_db"/>-->
+                            <oxy:LineSeries StrokeThickness="2" Color="Red" ItemsSource="{Binding RadioSceneBeamPattern}" 
+                                            DataFieldX="Angle_deg" DataFieldY="Value_db"/>
+                        </oxy:Plot.Series>
+                        <!--<oxy:Plot.Annotations>
+                            <oxy:LineAnnotation X="{Binding LeftBeamEdge_07}" Type="Vertical" />
+                            <oxy:LineAnnotation X="{Binding RightBeamEdge_07}" Type="Vertical" />
+                            <oxy:LineAnnotation Y="-3" Type="Horizontal" MinimumX="{Binding LeftBeamEdge_07}" MaximumX="{Binding RightBeamEdge_07}" />
+                            <oxy:LineAnnotation Y="{Binding UBL}" Type="Horizontal" Color="Red" Text="{Binding UBL, StringFormat='УБЛ={0:f1}дБ'}"/>
+                            <oxy:LineAnnotation Y="{Binding MeanUBL}" Type="Horizontal" Color="Red" Text="{Binding MeanUBL, StringFormat='Средний УБЛ={0:f1}дБ'}" LineStyle="Dot"/>
+                            <oxy:LineAnnotation Y="0" Type="Horizontal" Color="Black" LineStyle="Solid" />
+                        </oxy:Plot.Annotations>-->
+                    </oxy:Plot>
+                </TabItem>
             </TabControl>
             <GridSplitter Grid.Column="0" VerticalAlignment="Stretch" HorizontalAlignment="Right" Width="2"/>
         </Grid>
