--- a/BeamForming/MainWindow2.xaml
+++ b/BeamForming/MainWindow2.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
         xmlns:l="clr-namespace:BeamForming"  
         xmlns:oxy="http://oxyplot.org/wpf"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="Модель ЦАР" Height="600" Width="800">
     <Window.DataContext>
         <l:MainViewModel/>
@@ -30,42 +31,42 @@
                     <StackPanel>
                         <Expander Header="Параметры радиосцены" IsExpanded="True">
                             <StackPanel>
-                                <TextBlock Text="Амплитуда сигнала 1 волны"/>
+                                <TextBlock Text="Амплитуда сигнала 1 волны [В]"/>
                                 <DockPanel>
                                     <ScrollBar Orientation="Horizontal" DockPanel.Dock="Right"
                                                Minimum="0" Maximum="10" 
                                                SmallChange="0.1" Value="{Binding A01}"/>
                                     <TextBox Text="{Binding A01, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:f2}}"/>
                                 </DockPanel>
-                                <TextBlock Text="Частота сигнала 1 волны"/>
+                                <TextBlock Text="Частота сигнала 1 волны [ГГц]"/>
                                 <DockPanel>
                                     <ScrollBar Orientation="Horizontal" DockPanel.Dock="Right"
                                                Minimum="0.1" Maximum="10" 
                                                SmallChange="0.1" Value="{Binding f01, Converter={l:MultiplyConverter K=1e-9}}"/>
                                     <TextBox Text="{Binding f01, Converter={l:MultiplyConverter K=1e-9}}" />
                                 </DockPanel>
-                                <TextBlock Text="Угол падения 1 волны"/>
+                                <TextBlock Text="Угол падения 1 волны [°]"/>
                                 <DockPanel>
                                     <ScrollBar Orientation="Horizontal" DockPanel.Dock="Right"
                                                Minimum="-90" Maximum="90" 
                                                SmallChange="1" Value="{Binding ThSignal1}"/>
                                     <TextBox Text="{Binding ThSignal1, UpdateSourceTrigger=PropertyChanged}" />
                                 </DockPanel>
-                                <TextBlock Text="Амплитуда сигнала 2 волны"/>
+                                <TextBlock Text="Амплитуда сигнала 2 волны [В]"/>
                                 <DockPanel>
                                     <ScrollBar Orientation="Horizontal" DockPanel.Dock="Right"
                                                Minimum="0" Maximum="10" 
                                                SmallChange="0.1" Value="{Binding A02}"/>
                                     <TextBox Text="{Binding A02, UpdateSourceTrigger=PropertyChanged}" />
                                 </DockPanel>
-                                <TextBlock Text="Частота сигнала 2 волны"/>
+                                <TextBlock Text="Частота сигнала 2 волны [ГГц]"/>
                                 <DockPanel>
                                     <ScrollBar Orientation="Horizontal" DockPanel.Dock="Right"
                                                Minimum="0.1" Maximum="10" 
                                                SmallChange="0.1" Value="{Binding f02, Converter={l:MultiplyConverter K=1e-9}}"/>
                                     <TextBox Text="{Binding f02, Converter={l:MultiplyConverter K=1e-9}}" />
                                 </DockPanel>
-                                <TextBlock Text="Угол падения 2 волны"/>
+                                <TextBlock Text="Угол падения 2 волны [°]"/>
                                 <DockPanel>
                                     <ScrollBar Orientation="Horizontal" DockPanel.Dock="Right"
                                                Minimum="-90" Maximum="90" 
@@ -77,22 +78,24 @@
                         <Expander Header="Параметры решётки"  IsExpanded="True">
                             <StackPanel>
                                 <TextBlock Text="Число элементов"/>
-                                <TextBox Text="{Binding N, UpdateSourceTrigger=PropertyChanged}"/>
-                                <TextBlock Text="Шаг"/>
-                                <TextBox Text="{Binding d, UpdateSourceTrigger=PropertyChanged}"/>
-                                <TextBlock Text="Угол фазирования"/>
-                                <TextBox Text="{Binding Th0, UpdateSourceTrigger=PropertyChanged}"/>
+                                <xctk:IntegerUpDown Value="{Binding N, UpdateSourceTrigger=LostFocus}" Minimum="1"/>
+                                <TextBlock Text="Размер выборки"/>
+                                <xctk:IntegerUpDown Value="{Binding Nd, UpdateSourceTrigger=LostFocus}" Minimum="2"/>
+                                <TextBlock Text="Шаг [м]"/>
+                                <xctk:DoubleUpDown Value="{Binding d, UpdateSourceTrigger=LostFocus}" Minimum="0"/>
+                                <TextBlock Text="Угол фазирования [°]"/>
+                                <xctk:DoubleUpDown Value="{Binding Th0, UpdateSourceTrigger=LostFocus}" Minimum="-90" Maximum="90"/>
                                 <GroupBox Header="Параметры антенного элемента" Visibility="Collapsed"></GroupBox>
                                 <GroupBox Header="Параметры АЦП">
                                     <StackPanel>
-                                        <TextBlock Text="Частота дискретизации"/>
+                                        <TextBlock Text="Частота дискретизации [ГГц]"/>
                                         <TextBox Text="{Binding fd, Converter={l:MultiplyConverter K=1e-9}}"/>
                                         <TextBlock Text="Разрядность кода"/>
-                                        <TextBox Text="{Binding n, UpdateSourceTrigger=PropertyChanged}"/>
-                                        <TextBlock Text="Динамический диапазон"/>
-                                        <TextBox Text="{Binding MaxValue, UpdateSourceTrigger=PropertyChanged}"/>
-                                        <TextBlock Text="Величина джиттера"/>
-                                        <TextBox Text="{Binding tj, UpdateSourceTrigger=PropertyChanged}"/>
+                                        <TextBox Text="{Binding n}"/>
+                                        <TextBlock Text="Динамический диапазон [В]"/>
+                                        <TextBox Text="{Binding MaxValue}"/>
+                                        <TextBlock Text="Величина джиттера [нс]"/>
+                                        <TextBox Text="{Binding tj}"/>
                                     </StackPanel>
                                 </GroupBox>
                             </StackPanel>
@@ -114,7 +117,8 @@
                         </StackPanel>
                         <oxy:Plot Grid.Row="1">
                             <oxy:Plot.Axes>
-                                <oxy:LinearAxis Position="Left" MajorGridlineStyle="Dash" MinorGridlineStyle="Dot" MinorStep="1" MajorStep="2" MajorGridlineThickness="2" MinorTickSize="2" MajorTickSize="4" />
+                                <oxy:LinearAxis Position="Left" MajorGridlineStyle="Dash" MinorGridlineStyle="Dot" MajorGridlineThickness="2" MinorTickSize="2" MajorTickSize="4" 
+                                                MajorStep="10" MinorStep="5"/>
                                 <oxy:LinearAxis Position="Bottom" PositionAtZeroCrossing="True"
                                                 MajorGridlineStyle="Dash" MinorGridlineStyle="Dot"
                                                 AxislineColor="Black" AxislineThickness="1" AxislineStyle="Solid" Unit="нс" />
@@ -124,7 +128,8 @@
                         </oxy:Plot>
                         <oxy:Plot Grid.Row="2">
                             <oxy:Plot.Axes>
-                                <oxy:LinearAxis Position="Left" MajorGridlineStyle="Dash" MinorGridlineStyle="Dot" Key="Amplitude"/>
+                                <oxy:LinearAxis Position="Left" MajorGridlineStyle="Dash" MinorGridlineStyle="Dot" Key="Amplitude" 
+                                                MajorStep="5" MinorStep="2.5"/>
                                 <oxy:LinearAxis Position="Bottom" PositionAtZeroCrossing="True"
                                                 MajorGridlineStyle="Dash" MinorGridlineStyle="Dot"
                                                 AxislineColor="Black" AxislineThickness="1" AxislineStyle="Solid" Unit="ГГц" />
@@ -147,10 +152,14 @@
                         <oxy:Plot.Axes>
                             <!-- PositionAtZeroCrossing="True" TitlePosition="0.05" AxisTitleDistance="-45" FractionUnit="0.0175" FractionUnitSymbol="deg" FormatAsFractions="True" -->
                             <oxy:LinearAxis Position="Bottom"  Title="Угол"
-                                MajorGridlineColor="Gray" MinorGridlineColor="LightGray" MajorGridlineStyle="Solid" MinorGridlineStyle="Dash"
-                                AxislineColor="Black" AxislineStyle="Solid" AxislineThickness="2" Unit="deg"/>
+                                            MajorGridlineColor="Gray" MinorGridlineColor="LightGray" MajorGridlineStyle="Solid" MinorGridlineStyle="Dash"
+                                            MajorStep="10"
+                                            AxislineColor="Black" AxislineStyle="Solid" AxislineThickness="2" Unit="deg"/>
                             <oxy:LinearAxis Position="Left" Title="ДН" AxislineColor="Black" AxislineStyle="Solid" AxislineThickness="2"
-                                MajorGridlineColor="Gray" MinorGridlineColor="LightGray" Minimum="-40"/>
+                                            MajorStep="10"
+                                            MajorGridlineColor="Gray" MinorGridlineColor="LightGray" Minimum="-40"
+                                            MajorGridlineStyle="Dash" MinorGridlineStyle="Dot"
+                                            MajorGridlineThickness="1" MinorGridlineThickness="0.5"/>
                         </oxy:Plot.Axes>
                         <oxy:Plot.Series>
                             <!--<oxy:LineSeries StrokeThickness="2" Color="Red" ItemsSource="{Binding BeamNorm}" DataFieldX="Angle_deg" DataFieldY="Value_db"/>-->
